--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -28,12 +28,10 @@ jobs:
         run: |
           git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/gl1tchxd-git/Feldstaerke-Calc.git
           git checkout -b rust-lib origin/rust-lib || git checkout rust-lib
-          git rm -r --cached . || true
+          git rm -rf ./*
           git checkout master -- src/library/
-          mkdir temp_library
-          mv src/library/* temp_library/
-          mv temp_library/* .
-          rm -rf temp_library src/library
+          mv src/library/* ./
+          rm -rf src/library
           git add .
           git commit -m "Sync library folder from master branch"
           git push origin rust-lib
