--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -25,14 +25,17 @@ jobs:
     - name: Compare branches
       id: check_diff
       run: |
-        git diff --quiet origin/master || echo "branches are different" > diff.txt
+        if git diff --quiet origin/master; then
+          echo "branches_are_same=true" >> $GITHUB_ENV
+        else
+          echo "branches_are_same=false" >> $GITHUB_ENV
+        fi
 
     - name: Display diff result
-      if: success()
-      run: cat diff.txt
+      run: echo "Branches are different, proceeding with copy"
 
     - name: Copy src/library to rust-lib branch
-      if: success() && steps.check_diff.outputs.diff
+      if: env.branches_are_same == 'false'
       run: |
         git checkout master
         cp -r src/library/* ../rust-lib/
